# python_2048_game

./: .gitignore  README.md  main.py  pyproject.toml
docs/: 01_overview.md  02_structure.md  03_models.md  04_game_logic.md  05_ui.md  ARCHITECTURE.md  readme.md
game_2048/: __init__.py  app.py  config.py  game.py  models.py  ui.py  utils.py
