[project]
name = "game-2048"
version = "0.1.0"
description = "🎮 A terminal-based 2048 game built with Textual"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=14.3.3",
    "textual>=8.0.2",
]

[project.scripts]
game-2048 = "game_2048.app:run_game"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
